--- a/ColorReduction.csproj
+++ b/ColorReduction.csproj
@@ -35,6 +35,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="FastBitmapLib, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+            <HintPath>packages\FastBitmapLib.2.1.0\lib\net452\FastBitmapLib.dll</HintPath>
+        </Reference>
         <Reference Include="System"/>
         <Reference Include="System.Core"/>
         <Reference Include="System.Xml.Linq"/>
@@ -48,6 +51,7 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ColorReducerFactory.cs"/>
         <Compile Include="MainWindow.cs">
             <SubType>Form</SubType>
         </Compile>
@@ -56,7 +60,13 @@
         </Compile>
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Reducers\IColorReducer.cs"/>
+        <Compile Include="ReducerOptions.cs"/>
+        <Compile Include="Reducers\AverageDitheringReducer.cs"/>
+        <Compile Include="Reducers\ErrorPropagationReducer.cs"/>
+        <Compile Include="Reducers\ColorReducer.cs"/>
+        <Compile Include="Reducers\NullReducer.cs"/>
+        <Compile Include="Reducers\OrderedDitheringReducer.cs"/>
+        <Compile Include="Reducers\PopularityAlgorithmReducer.cs"/>
         <EmbeddedResource Include="MainWindow.resx">
             <DependentUpon>MainWindow.cs</DependentUpon>
         </EmbeddedResource>
@@ -69,6 +79,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="packages.config"/>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
